# VIGIL-APEX-F1

./: .dockerignore  .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .gitleaks.toml  .npmrc  .prettierignore  .prettierrc  .snyk-policy.yaml  .trivyignore  AUDIT-REPORT-PHASE-1-CLOSEOUT.md  AUDIT-REPORT.md  AUDIT.md  CLAUDE.md  Makefile  OPERATIONS.md  README.md  REVIEW.md  ROADMAP.md  THREAT-MODEL-CMR.md  TODO.md  TRUTH.md  commitlint.config.cjs  eslint.config.js  eslint.config.mjs  lint-staged.config.cjs  mypy.ini  package.json  pnpm-lock.yaml  pytest.ini  renovate.json  ruff.toml  tsconfig.base.json  turbo.json  vitest.scripts.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: chart-lint.yml  ci.yml  contract-test.yml  phase-gate.yml  python-ci.yml  secret-scan.yml  security.yml  synthetic-failure.yml
.husky/: commit-msg  pre-commit
apps/adapter-runner/: package.json
apps/audit-bridge/: package.json
apps/audit-verifier/: package.json
apps/dashboard/: next.config.mjs  package.json  playwright-visual.config.ts  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
apps/worker-adapter-repair/: package.json
apps/worker-anchor/: package.json
apps/worker-audit-watch/: package.json
apps/worker-conac-sftp/: package.json  tsconfig.json
apps/worker-counter-evidence/: package.json  vitest.config.ts
apps/worker-document/: package.json
apps/worker-dossier/: package.json
apps/worker-entity/: package.json
apps/worker-extractor/: package.json  tsconfig.json
apps/worker-fabric-bridge/: README.md  package.json
apps/worker-federation-agent/: package.json
apps/worker-federation-receiver/: package.json
apps/worker-governance/: package.json
apps/worker-image-forensics/: pyproject.toml
apps/worker-image-forensics/src/vigil_forensics/: __init__.py  exif.py  fonts.py  main.py  schemas.py  signatures.py
apps/worker-image-forensics/tests/: test_exif.py  test_exif_more.py  test_fonts.py  test_main_handler.py  test_signatures.py
apps/worker-minfi-api/: package.json
apps/worker-outcome-feedback/: package.json
apps/worker-pattern/: package.json
apps/worker-pattern-discovery/: package.json
apps/worker-reconcil-audit/: package.json
apps/worker-satellite/: conftest.py  pyproject.toml
apps/worker-satellite/src/vigil_satellite/: __init__.py  activity.py  audit_bridge.py  ipfs.py  main.py  nicfi.py  schemas.py  sentinel1.py  stac.py
apps/worker-satellite/tests/: test_activity.py  test_audit_bridge.py  test_ipfs_pin.py  test_main_helpers.py  test_nicfi.py  test_provider_chain.py  test_py_common_errors.py  test_py_common_health.py  test_py_common_logging.py  test_py_common_pg.py  test_py_common_redis_consumer.py  test_py_common_secrets.py  test_py_common_shutdown.py  test_py_common_vault.py  test_sentinel1.py  test_stac_helpers.py
apps/worker-score/: package.json
apps/worker-tip-channels/: package.json
apps/worker-tip-triage/: package.json  vitest.config.ts
chaincode/audit-witness/: package.json  tsconfig.json
contracts/: .solhint.json  hardhat.config.ts  package.json  slither.config.json  tsconfig.json
contracts/contracts/: VIGILAnchor.sol  VIGILGovernance.sol
contracts/scripts/: deploy-upgradeable.ts  deploy.ts
contracts/test/: Tier51.test.ts  VIGILAnchor.test.ts  VIGILGovernance.test.ts  VIGILGovernanceV1.test.ts
docs/: COMPLETION-MANIFEST.md  IMPLEMENTATION-PLAN.md  PHASE-3-FEDERATION.md  RESTORE.md  SLOs.md  TODO_PHASE1_CLOSURE.md  UNDP-REVIEW-RISKS.md  ring-0-self-critique.md
docs/archive/: CORE_BUILD_COMPANION_v1.docx  CORE_BUILD_COMPANION_v2.docx  CORE_EXEC_v1.docx  CORE_HSK_v1.docx  CORE_SRD_v3.docx  MVP_SERVER.docx  RTPFC_Governance_Intelligence_Platform.pptx
docs/audit/: 00-orientation.md  01-system-map.md  02-surfaces.md  03-data-flows.md  04-failure-modes.md  05-permissions.md  06-ui.md  07-cryptography.md  08-audit-chain.md  09-stress-test.md  10-findings.md  11-doctrine.md  12-recommendations.md  FRONTIER-AUDIT.md  hardening-orientation.md  whole-system-audit.md
docs/decisions/: DRY-RUN-DECISION.md  MEMO-AUDIT-032-tip-key-rotation.md  MEMO-AUDIT-088-historical-content-hash.md  cross-link-audit.md  decision-008-readthrough-checklist.md  decision-012-promotion-prep.md  decision-012-readthrough-checklist.md  decision-020-dl380-ai-security-tier.md  decision-021-sse-over-socket-io.md  hardening-category-1-completion-note.md  hardening-category-10-completion-note.md  hardening-category-2-completion-note.md  hardening-category-3-completion-note.md  hardening-category-4-completion-note.md  log.md  (+9 more)
docs/patterns/: INDEX.md  (+45 more)
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
infra/: sources.json
load-tests/: k6-tip-portal.js  k6-verify-page.js  locust-minfi-api.py
prompts/: PHASE-1-COMPLETION-AGENT.md  SUPPLIER-INTEL-INITIATIVE.md
scripts/: audit-decision-log.ts  cert-expiry-check.ts  check-api-error-leaks.ts  check-compose-deps.ts  check-decision-cross-links.ts  check-decisions.ts  check-env-vars.ts  check-helm-values-drift.ts  check-llm-pricing.ts  check-migration-locks.ts  check-migration-pairs.ts  check-migration-rollback.ts  check-pattern-coverage.ts  check-rbac-coverage.ts  check-safellm-coverage.ts  check-source-count.ts  check-source-credentials.ts  check-test-coverage-floor.ts  check-weaknesses-index.ts  dr-rehearsal.ts  dr-restore-test.sh  e2e-fixture.sh  enrich-pattern-docs.ts  enumerate-base-images.ts  enumerate-publish-images.ts  generate-pattern-catalogue.ts  generate-sbom-summary.ts  generate-worker-runbooks.ts  helm-render-smoke.sh  measure-test-ratio.ts  ntp-check.ts  pin-image-digests.ts  render-helm-golden.sh  review-demo-seed.ts  review-demo-verify.ts  review-demo.sh  seed-calibration.ts  seed-fixture-events.ts  sentinel-quorum.ts  sentinel-tor-check.ts  (+6 more)
tools/: e2e-smoke.sh  verify-dossier.sh
tools/vigil-council-signer/rust-helper/: Cargo.toml
tools/vigil-council-signer/rust-helper/src/: main.rs  sign.rs
tools/vigil-polygon-signer/rust-helper/: Cargo.toml
tools/vigil-polygon-signer/rust-helper/src/: main.rs  sign.rs
(+776 files in other folders)
