[project]
name = "worker-satellite"
version = "0.1.0"
description = "VIGIL APEX satellite & GIS worker — Rasterio + STAC + Sentinel Hub. Computes activity_score for category-D patterns."
requires-python = ">=3.12,<3.13"
license = { text = "UNLICENSED" }
authors = [{ name = "Junior Thuram Nana", email = "satoshinakamotobull@gmail.com" }]

dependencies = [
  # Resolved by name from the env. The Dockerfile installs
  # py-common in a prior layer (PythonWorker.Dockerfile:73-74);
  # CI installs it in a prior step (python-ci.yml: `pip install -e
  # packages/py-common[test]` before this package). A file:// URL
  # was previously hardcoded to /app/packages/py-common — but
  # neither Docker (which uses /repo/) nor CI (which checks out at
  # /home/runner/work/...) actually has /app/, so the URL was a
  # latent bug surfaced when python-ci's path-filter re-fired.
  "vigil-common",
  "rasterio>=1.3.10,<2",
  "numpy>=1.26.0,<3",
  "shapely>=2.0.0,<3",
  "pyproj>=3.6.0,<4",
  "pystac-client>=0.8.3,<1",
  "planetary-computer>=1.0.0,<2",
  "sentinelhub>=3.10.0,<4",
  "scikit-image>=0.24.0,<1",
  "httpx>=0.27.0,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.24.0,<1",
  "pytest-cov>=5.0.0,<6",
  "pytest-mock>=3.14.0,<4",
  "fakeredis>=2.24.0,<3",
]

[project.scripts]
worker-satellite = "vigil_satellite.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vigil_satellite = ["py.typed"]
